--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
+#user-list ul li a {overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
