--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,4 +1,3 @@
 <footer class="app-footer">
-  <span><a href="http://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span>
-  <span class="ml-auto">Powered by <a href="http://coreui.io">CoreUI</a></span>
+  <span><a href="http://www.esaburruss.com">E.S.A. Burruss</a> &copy; 2018</span>
 </footer>
